--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <input id="startbtn" type="button" value="スタート！">
     </div>
 
-    <script src="js/main.js" ></script>
+    <script src="main.js" ></script>
 </body>
 </html>
